create section about

--- a/styles/global.css
+++ b/styles/global.css
@@ -93,6 +93,11 @@ ul[role="list"] {
   list-style: none;
 }
 
+img {
+  max-width: 100%;
+  display: inline-block;
+}
+
 /* 80em = 1280px (80 * 16px = 1280px) */
 @media (width >= 80em) {
   :root {
