--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -53,7 +53,7 @@
     content: "";
     position: absolute;
     border-radius: inherit;
-    inset: 1.5px; /* 0.09375rem */
+    inset: 1px;
     background-color: var(--bg-color);
   }
 
